add new Modes, fix SR bugs

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328new
+;framework = arduino
+;monitor_speed = 115200
+;upload_speed = 	57600
+;
+
 [env:az-delivery-devkit-v4]
 platform = espressif32
 board = az-delivery-devkit-v4
